# github-dashboard

./: Cargo.toml  Makefile  README.md
scripts/: run-desktop.sh
src/: main.rs
